master.css
body {
    background: #fff!important;
}

#jenkins-head-icon {
  display: none !important;
}
#jenkins-name-icon {
  display: none !important;
}
#main-panel > ul:nth-child(8) > li > img {
    margin-right: 10px;
    margin-bottom: 10px;
}

#top-panel {
    height: 55px!important;
    padding-top: 15px;
    padding-left: 5px;
    background: #036;
}

#top-panel td #login-field span a,#top-panel td #searchform a {
    background: 0 0;
}

#top-panel td>a {
    display: block;
    width: 300px;
}

#breadcrumbs {
    background: rgb(83,194,195);
    border-top: 1px solid #000;
    border-bottom: none!important;
    margin-bottom: 15px;
    padding-left: 8px!important;
    height: 35px!important;
}

#breadcrumbs li a {
    color: #fff!important;
    padding-top: 5px;
    height: 30px!important;
}

#breadcrumbs li a:hover {
    background: #fff;
    color: #505050!important;
    text-decoration: none!important;
}

#right-top-nav a {
    color: #fff!important;
    margin-top: 1px;
    text-decoration: none;
    display: block;
    padding-left: 5px;
    padding-right: 5px;
    padding-top: 5px;
    height: 30px!important;
}

#right-top-nav a:hover {
    background: #fff;
    color: #505050!important;
}

#main-table {
    background: #fff!important;
    background-image: none!important;
    height: 100%!important;
}

#filter-box,#search-box {
    padding: 3px!important;
    box-shadow: none!important;
    background-image: none!important;
    border: 1px solid #DDD!important;
    border-radius: 4px!important;
    outline: 0!important;
}

.yui-skin-sam .yui-ac {
    margin-top: 3px!important;
}

#search-form>a {
    padding-bottom: 5px;
}

#top-panel>table>tbody>tr>td:first-of-type>a>img {
    margin-top: 5px;
}

#searchform a {
    display: block;
    margin-top: 4px;
    margin-left: 5px;
    float: right;
}

#footer {
    background: rgba(0,0,0,.04);
    color: #505050!important;
}

#footer>a {
    color: #326ca6!important;
}

#footer-container {
    position: fixed;
    bottom: 0;
}

a {
    color: #326ca6!important;
    text-decoration: none!important;
}

#login-field a {
    color: #fff!important;
}

#login-field>span>a {
    color: #fff!important;
    font-weight: 400!important;
}

#login-field>span>a:visited {
    color: #fff!important;
    font-weight: 400!important;
}

#login-field>span>a:hover {
    text-decoration: none!important;
}

a:hover {
    text-decoration: underline!important;
}

.smallfont>a:hover {
    text-decoration: none!important;
}

#projectstatus {
    margin-bottom: 30px!important;
}

#projectstatus th>a,th,th>a {
    background: inherit!important;
    color: #000!important;
    font-size: 13px;
    text-align: left;
}

body>tr:first-of-type {
    border-bottom: 1px solid rgba(0,0,0,.1)!important;
}

table[style="margin-top: 1em; margin-left:1em;"] td {
    padding-top: 24px;
}

tr {
    border-bottom: 1px solid rgba(0,0,0,.1)!important;
    border-left: none!important;
    border-right: none!important;
    border-top: none!important;
}

#projectstatus td,.bigtable td {
    padding: 10px!important;
}

#projectstatus tr:nth-child(even)>td,.bigtable tr:nth-child(even)>td {
    background: rgba(0,0,0,.075)!important;
}

#projectstatus tr:nth-child(odd)>td,.bigtable tr:nth-child(odd)>td {
    background: rgba(0,0,0,.025)!important;
}

#projectstatus tr th:first-child,.bigtable tr th:first-child {
    padding: 10px;
    #background: rgba(0,0,0,.1)!important;
}

#projectstatus,.bigtable {
    border: 1px solid rgba(0,0,0,.1)!important;
}

.bigtable tr {
    border: none!important;
}

tr:hover {
    background: inherit!important;
}

table.pane>tbody>tr>td:last-child {
    border-right: none!important;
}

td.active {
    background: #fff!important;
    margin-top: -2px!important;
    color: #326ca6!important;
}

td.inactive {
    border: none!important;
}

#viewList {
    margin-bottom: 15px!important;
    border: 1px solid rgba(0,0,0,.1)!important;
}

#viewList td {
    padding-bottom: 5px;
}

.dashboard {
    margin-top: 10px!important;
}

.build-monitor.dashboard {
    margin-top: 0!important;
}

.build-monitor a {
    color: #ddd!important;
}

td.inactive a {
    color: #505050!important;
}

td {
    border: none!important;
    padding-right: 5px!important;
    height: 25px;
    font-size: 13px!important;
}

td.inactive:hover {
    background: #fff!important;
}

#side-panel {
    background: rgba(0,0,0,.05)!important;
    padding-left: 0!important;
    padding-right: 0!important;
    height: 100%!important;
    position: absolute!important;
}

#main-panel {
    border-left: 1px solid #ddd!important;
    margin-left: 10px!important;
    height: 100%!important;
    float: right!important;
}

table {
    margin: 0!important;
    padding: 0!important;
    border-spacing: 0!important;
    border: none!important;
}

#noJobDiv {
    border: none!important;
}

.subtasks>a,.task>a {
    color: #505050!important;
}

#resizeContainer {
    border: none!important;
}

.dashboard td {
    vertical-align: middle!important;
}

#description {
    margin: 0!important;
    overflow: auto;
}

#side-panel div {
    padding-top: 3px;
    padding-bottom: 3px;
}

#side-panel tr {
    border: none!important;
}

.pane {
    margin-top: 15px!important;
}

.subtasks,.task {
    min-height: 38px!important;
}

.subtasks:empty {
    display: none;
}

td.pane,tr.build-row>td {
    background: rgba(0,0,0,.05)!important;
    border-left: 1px solid #f0f0f0!important;
    border-bottom: 1px solid #f0f0f0!important;
    text-align: left;
}

td.pane:first-of-type,td.pane:last-of-type,th.pane:first-of-type,tr.build-row>td:first-of-type,tr.build-row>td:last-of-type {
    border-left: none!important;
}

.build-row:last-of-type>td {
    padding-top: 10px!important;
    background: inherit!important;
}

form {
    clear: both;
}

.pane-header,.pane-header>a {
    color: #505050!important;
}
/* ... */

